2008-08-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinymailbox.el (tinymailbox-message-macro): Update to
	modern backquote.
	(tinymailbox-header-macro): Update to modern backquote.
	(tinymailbox-paragraph-macro): Update to modern backquote.
	(tinymailbox-fmacro-move-1): Update to modern backquote.
	(tinymailbox-fmacro-move): Update to modern backquote.
	(tinymailbox-font-lock): Use `make-local-variable'.

	* tiny/tinyirc.el (tinyirc-pastebot-install-perl-util-pastebot):
	Replace `replace-regexp' call with lisp.

	* tiny/tinydesk.el (tinydesk-:loaded-file-list): Change to `defvar'.
	(tinydesk-:rejected-file-list): Change to `defvar'.

	* tiny/tinycomment.el (tinycomment-:not-comment-re): Fix defcustom.

	* tiny/tinycache.el (tinycache-:mode-on-string-p): Change to
	defsubst.
	(tinycache-map-over-buffers): Update to modern backquote.
	(tinycache-buffer-list-map-over-buffers): Update to modern
	backquote.
	(tinycache-buffer-list-map-over-off-buffers): Update to modern
	backquote.

	* tiny/tinyappend.el (tinyappend-line-area-args): Update to modern
	backquote.
	(tinyappend-yank): Use `use modern backquote'.

	* tiny/tinybuffer.el (tinybuffer-iswitch-next): Update to modern
	backquote.
	(tinybuffer-iswitch-previous): Update to modern backquote.

	* tiny/tinynbr.el (mapcar): Update to modern backquote.

	* tiny/tinyurl.el
	- Use `string-to-number'
	(tinyurl-command-table-before-string): Update to
	modern backquote.
	(tinyurl-handler-mail-after): Add 2nd arg to `throw'.
	(tinyurl-overlay-kill-in-buffer): Remove 2nd copy of this function.
	(tinyurl-overlay-kill): Remove 2nd copy of this function.
	(turn-on-tinyurl-mode-automatically): Check boundp
	`tinyurl-:mode-global-turned-off'.

	* tiny/tinytab.el (tinytab-message): Update to modern backquote.

	* tiny/tinymail.el (tinymail-:complete-bbdb-case-fold-search): Fix
	defcustom.
	(tinymail-mail-aliases): Update to modern backquote.
	(tinymail-gpg-recipient): Correct to_field => `to-field'.